--- a/Tensors.ipynb
+++ b/Tensors.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Tensors.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPKYlmhYEZvBGITWwdY6MQC",
+      "authorship_tag": "ABX9TyMAkhR6C7/gPh9zi2WYbqCM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -919,6 +919,523 @@
             "tags": [],
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "azTjTpN0Ea9_"
+      },
+      "source": [
+        "#2D Tensors"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ffj6jNS9Ed_P",
+        "outputId": "6dae4d11-9130-4a93-c183-76ec45730b78"
+      },
+      "source": [
+        "one_d = torch.arange(0, 9)\r\n",
+        "one_d"
+      ],
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0, 1, 2, 3, 4, 5, 6, 7, 8])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 62
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vQA3BkBUEw_F",
+        "outputId": "33e57b1c-757e-4569-cba3-4bd9456aa1d2"
+      },
+      "source": [
+        "two_d = one_d.view(3, 3)\r\n",
+        "two_d\r\n"
+      ],
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0, 1, 2],\n",
+              "        [3, 4, 5],\n",
+              "        [6, 7, 8]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Kp7h1Y-dE-8W",
+        "outputId": "8a3dec39-3b37-4052-db28-21d8012096a8"
+      },
+      "source": [
+        "two_d.dim()"
+      ],
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 66
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "g1kfWEh4FCp_"
+      },
+      "source": [
+        "Slicing and indexing"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rBG9M4TtE_7z",
+        "outputId": "0f73b19f-24f0-4a85-b7b5-2f447a44bb54"
+      },
+      "source": [
+        "two_d[0][1]"
+      ],
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(1)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 67
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "X-ZvfghOFaC1"
+      },
+      "source": [
+        "18 values arranged as 2 3x3 tensors yeilding 3D array"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HH8IMMZlFK7i",
+        "outputId": "b882534a-950e-44a9-d1cb-20d63657a40a"
+      },
+      "source": [
+        "x = torch.arange(0, 18).view(2, 3, 3)\r\n",
+        "x"
+      ],
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[ 0,  1,  2],\n",
+              "         [ 3,  4,  5],\n",
+              "         [ 6,  7,  8]],\n",
+              "\n",
+              "        [[ 9, 10, 11],\n",
+              "         [12, 13, 14],\n",
+              "         [15, 16, 17]]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 69
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dOIudZzNFtUU",
+        "outputId": "9991270b-b2f7-4643-9a2d-32ce98f9ec22"
+      },
+      "source": [
+        "x = torch.arange(0, 18).view(3, 2, 3)\r\n",
+        "x"
+      ],
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[ 0,  1,  2],\n",
+              "         [ 3,  4,  5]],\n",
+              "\n",
+              "        [[ 6,  7,  8],\n",
+              "         [ 9, 10, 11]],\n",
+              "\n",
+              "        [[12, 13, 14],\n",
+              "         [15, 16, 17]]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 70
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cqXrBP96GBRx"
+      },
+      "source": [
+        "Accessing element 10 from tensor x"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uY_uZYbVGE5j",
+        "outputId": "4a6c0293-963a-40c4-ef9d-2553844ee201"
+      },
+      "source": [
+        "x[1][1][1]"
+      ],
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(10)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 71
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9V5GUFYhGMxh"
+      },
+      "source": [
+        "Segment slices - 6...11"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rp77T3mHGOa5",
+        "outputId": "189077c3-1b4d-473d-c0a5-dbd426301cd9"
+      },
+      "source": [
+        "x[1][0:2][0:3]"
+      ],
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[ 6,  7,  8],\n",
+              "        [ 9, 10, 11]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 72
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AtdwNYhoGsTr"
+      },
+      "source": [
+        "#Matrix Multiplication"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "C7y7ItZ1Gupz",
+        "outputId": "249f65f2-b086-4024-cbe0-8a7e107f0828"
+      },
+      "source": [
+        "mat_a = torch.tensor([0, 3, 5, 5, 5, 2]).view(2, 3)\r\n",
+        "mat_a"
+      ],
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0, 3, 5],\n",
+              "        [5, 5, 2]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 73
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Fn8ffsgwHMWZ",
+        "outputId": "59c81f30-edde-46c2-c1ac-ab9c930808e1"
+      },
+      "source": [
+        "mat_b = torch.tensor([3, 4, 3, -2, 4, -2]).view(3, 2)\r\n",
+        "mat_b"
+      ],
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[ 3,  4],\n",
+              "        [ 3, -2],\n",
+              "        [ 4, -2]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 75
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PEm9oEa8Hepc",
+        "outputId": "486de6f5-763d-4d4a-97b6-718f83a6ac2d"
+      },
+      "source": [
+        "torch.matmul(mat_a, mat_b)"
+      ],
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[ 29, -16],\n",
+              "        [ 38,   6]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 76
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eYM72nRjHlvo",
+        "outputId": "6b72bb96-000f-4055-c561-299c0dc18ed4"
+      },
+      "source": [
+        "mat_a @ mat_b"
+      ],
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[ 29, -16],\n",
+              "        [ 38,   6]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 77
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4VAlqRtWHqN1"
+      },
+      "source": [
+        "#Gradient"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VFa9cadbHsHG",
+        "outputId": "67304735-ef16-4b52-b236-f2d72b8f6ab4"
+      },
+      "source": [
+        "x = torch.tensor(2.0, requires_grad=True)\r\n",
+        "y = 9*x**4 + 2*x**3 + 3*x**2 + 6*x + 1\r\n",
+        "y.backward()\r\n",
+        "x.grad"
+      ],
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(330.)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 83
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V2EsodvMIwT7",
+        "outputId": "374cf605-72e6-4b34-b5c2-9d9c2cd10729"
+      },
+      "source": [
+        "x = torch.tensor(1.0, requires_grad=True)\r\n",
+        "z = torch.tensor(2.0, requires_grad=True)\r\n",
+        "y = x**2 + z**3\r\n",
+        "y.backward()\r\n",
+        "x.grad\r\n"
+      ],
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(2.)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 87
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ju1R8-D6JM3D",
+        "outputId": "9e25657c-db33-4edf-e6e0-7ec541e2449a"
+      },
+      "source": [
+        "z.grad"
+      ],
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(12.)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 88
         }
       ]
     }
