--- a/NumPyFundamentals.ipynb
+++ b/NumPyFundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "NumPyFundamentals.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOyzMVIBKD47K1rs7OBGuKR",
+      "authorship_tag": "ABX9TyMmTS4KjMvEabXymbAlakmP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -316,18 +316,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mqGKKkFOHhPs",
-        "outputId": "deb3709a-9d06-48f0-f1f0-0ea54c7345ce"
+        "outputId": "682f0f73-16bd-4a96-c6d3-7b829d1576a1"
       },
       "source": [
         "x = np.arange(0, 3)\r\n",
         "y = np.arange(3, 6)\r\n",
         "z = np.arange(6, 9)\r\n",
         "\r\n",
-        "multi_array = np.array([x, y, z])\r\n",
+        "multi_array = np.array([x, y, z], dtype = np.int16)\r\n",
         "print(multi_array)\r\n",
-        "print(multi_array.shape)"
+        "print(multi_array.shape)\r\n",
+        "print(multi_array.dtype)"
       ],
-      "execution_count": 23,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -335,7 +336,8 @@
             "[[0 1 2]\n",
             " [3 4 5]\n",
             " [6 7 8]]\n",
-            "(3, 3)\n"
+            "(3, 3)\n",
+            "int16\n"
           ],
           "name": "stdout"
         }
